force-app/main/default/objects/Customer_Technical_Report_CTR__c/Customer_Technical_Report_CTR__c.object-meta.xml
<CustomObject>
    <label>Customer Technical Report (CTR)</label>
    <nameField>
        <label>CTR</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Technical Reports (CTR)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>