force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Accumulation__c.field-meta.xml
<CustomField>
    <fullName>Accumulation__c</fullName>
    <label>Accumulation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mass</fullName>
            </value>
            <value>
                <fullName>FIFO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>