force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Add_Labeller_Bottle_Handling_Other__c.field-meta.xml
<CustomField>
    <fullName>Add_Labeller_Bottle_Handling_Other__c</fullName>
    <label>Add. Labeller - Bottle Handling Other</label>
    <length>30</length>
    <type>Text</type>
</CustomField>