force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Add_Labeller_Max_Speed_K_bph__c.field-meta.xml
<CustomField>
    <fullName>Add_Labeller_Max_Speed_K_bph__c</fullName>
    <label>Add Labeller - Max Speed (K/bph)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>