force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Add_Labeller_Wet_Glue_Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Add_Labeller_Wet_Glue_Manufacturer__c</fullName>
    <label>Add Labeller - Wet Glue Manufacturer</label>
    <length>30</length>
    <type>Text</type>
</CustomField>