force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Add_Labeller_Wet_Glue_Temperature__c.field-meta.xml
<CustomField>
    <fullName>Add_Labeller_Wet_Glue_Temperature__c</fullName>
    <label>Add Labeller - Wet Glue Temperature (℃)</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>