force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Additional_Conditioning_Information__c.field-meta.xml
<CustomField>
    <fullName>Additional_Conditioning_Information__c</fullName>
    <label>Additional Conditioning Information</label>
    <type>TextArea</type>
</CustomField>