force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Additional_Depalletisation_information__c.field-meta.xml
<CustomField>
    <fullName>Additional_Depalletisation_information__c</fullName>
    <label>Additional Depalletisation information</label>
    <type>TextArea</type>
</CustomField>