force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Additional_FBI__c.field-meta.xml
<CustomField>
    <fullName>Additional_FBI__c</fullName>
    <label>Additional FBI</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>