force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Additional_FBI_Accumulation__c.field-meta.xml
<CustomField>
    <fullName>Additional_FBI_Accumulation__c</fullName>
    <label>Additional FBI - Accumulation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mass</fullName>
            </value>
            <value>
                <fullName>FIFO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>