force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Additional_FBI_Inspections__c.field-meta.xml
<CustomField>
    <fullName>Additional_FBI_Inspections__c</fullName>
    <label>Additional FBI Inspections</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Missing Cap</fullName>
            </value>
            <value>
                <fullName>Cap Colour</fullName>
            </value>
            <value>
                <fullName>Thread Definition</fullName>
            </value>
            <value>
                <fullName>Underfill</fullName>
            </value>
            <value>
                <fullName>Overfill</fullName>
            </value>
            <value>
                <fullName>&quot;Dud&quot;/Tap Tone</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Metal Detector</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>