force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Additional_FBI_Model__c.field-meta.xml
<CustomField>
    <fullName>Additional_FBI_Model__c</fullName>
    <label>Additional FBI Model</label>
    <length>30</length>
    <type>Text</type>
</CustomField>