force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Additional_Labeller_Label_Substrate__c.field-meta.xml
<CustomField>
    <fullName>Additional_Labeller_Label_Substrate__c</fullName>
    <label>Additional Labeller - Label Substrate</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Paper Backed</fullName>
            </value>
            <value>
                <fullName>Metallic Paper Backed</fullName>
            </value>
            <value>
                <fullName>Coloured PVC Backed</fullName>
            </value>
            <value>
                <fullName>Clear PVC Backed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>