force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Additional_Labeller_Label_Supplier__c.field-meta.xml
<CustomField>
    <fullName>Additional_Labeller_Label_Supplier__c</fullName>
    <label>Additional Labeller - Label Supplier</label>
    <length>30</length>
    <type>Text</type>
</CustomField>