force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Additional_Labeller_Tax_Tape__c.field-meta.xml
<CustomField>
    <fullName>Additional_Labeller_Tax_Tape__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Additional Labeller - Tax Tape</label>
    <type>Checkbox</type>
</CustomField>