force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Additional_Labelling_Information__c.field-meta.xml
<CustomField>
    <fullName>Additional_Labelling_Information__c</fullName>
    <label>Additional Labelling Information</label>
    <length>200</length>
    <type>Text</type>
</CustomField>