force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Additional_Massflow_Glideliner_EBI_info__c.field-meta.xml
<CustomField>
    <fullName>Additional_Massflow_Glideliner_EBI_info__c</fullName>
    <label>Additional Massflow/Glideliner/EBI info</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>