force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Additional_Other_Information__c.field-meta.xml
<CustomField>
    <fullName>Additional_Other_Information__c</fullName>
    <label>Additional Other Information</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>