force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Additional_Packer_Info__c.field-meta.xml
<CustomField>
    <fullName>Additional_Packer_Info__c</fullName>
    <label>Additional Packer Info</label>
    <length>200</length>
    <type>Text</type>
</CustomField>