force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Additional_Rinser_Filler_Capper_info__c.field-meta.xml
<CustomField>
    <fullName>Additional_Rinser_Filler_Capper_info__c</fullName>
    <label>Additional Rinser, Filler &amp; Capper info</label>
    <type>TextArea</type>
</CustomField>