force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Air_Tunnel_Knives__c.field-meta.xml
<CustomField>
    <fullName>Air_Tunnel_Knives__c</fullName>
    <label>Air Tunnel / Knives</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tunnel</fullName>
            </value>
            <value>
                <fullName>Knives</fullName>
            </value>
            <value>
                <fullName>External Wash</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>