force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Cap_Supplier__c.field-meta.xml
<CustomField>
    <fullName>Cap_Supplier__c</fullName>
    <label>Cap Supplier</label>
    <length>30</length>
    <type>Text</type>
</CustomField>