force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Capper_Make__c.field-meta.xml
<CustomField>
    <fullName>Capper_Make__c</fullName>
    <label>Capper Make</label>
    <length>30</length>
    <type>Text</type>
</CustomField>