force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Capper_Model__c.field-meta.xml
<CustomField>
    <fullName>Capper_Model__c</fullName>
    <label>Capper Model</label>
    <length>30</length>
    <type>Text</type>
</CustomField>