force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Capsulator_Make__c.field-meta.xml
<CustomField>
    <fullName>Capsulator_Make__c</fullName>
    <label>Capsulator Make</label>
    <length>30</length>
    <type>Text</type>
</CustomField>