force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Capsulator_Model__c.field-meta.xml
<CustomField>
    <fullName>Capsulator_Model__c</fullName>
    <label>Capsulator Model</label>
    <length>30</length>
    <type>Text</type>
</CustomField>