force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Capsulator_Supplier__c.field-meta.xml
<CustomField>
    <fullName>Capsulator_Supplier__c</fullName>
    <label>Capsulator Supplier</label>
    <length>30</length>
    <type>Text</type>
</CustomField>