force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Capsulator_Tax_tape__c.field-meta.xml
<CustomField>
    <fullName>Capsulator_Tax_tape__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Capsulator - Tax tape</label>
    <type>Checkbox</type>
</CustomField>