force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Case_Rotator__c.field-meta.xml
<CustomField>
    <fullName>Case_Rotator__c</fullName>
    <label>Case Rotator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High Impact</fullName>
            </value>
            <value>
                <fullName>Low/Acceptable Impact</fullName>
            </value>
            <value>
                <fullName>No Impact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>