force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Checker_Weigher__c.field-meta.xml
<CustomField>
    <fullName>Checker_Weigher__c</fullName>
    <label>Checker Weigher</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>