force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Checker_Weigher_Make__c.field-meta.xml
<CustomField>
    <fullName>Checker_Weigher_Make__c</fullName>
    <label>Checker Weigher - Make</label>
    <length>30</length>
    <type>Text</type>
</CustomField>