force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Cold_Fill__c.field-meta.xml
<CustomField>
    <fullName>Cold_Fill__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cold Fill</label>
    <type>Checkbox</type>
</CustomField>