force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Cooler_Number_of_Zones__c.field-meta.xml
<CustomField>
    <fullName>Cooler_Number_of_Zones__c</fullName>
    <label>Cooler - Number of Zones</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>