force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Cooler_Zone_Temp__c.field-meta.xml
<CustomField>
    <fullName>Cooler_Zone_Temp__c</fullName>
    <label>Cooler - Zone Temp ℃</label>
    <length>60</length>
    <type>Text</type>
</CustomField>