force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Cork_Closure_Supplier__c.field-meta.xml
<CustomField>
    <fullName>Cork_Closure_Supplier__c</fullName>
    <label>Cork/Closure Supplier</label>
    <length>30</length>
    <type>Text</type>
</CustomField>