force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Cork_Size_mm__c.field-meta.xml
<CustomField>
    <fullName>Cork_Size_mm__c</fullName>
    <label>Cork Size (mm)</label>
    <length>8</length>
    <type>Text</type>
</CustomField>