force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Corker_Pushon_Make__c.field-meta.xml
<CustomField>
    <fullName>Corker_Pushon_Make__c</fullName>
    <label>Corker / Pushon Make</label>
    <length>30</length>
    <type>Text</type>
</CustomField>