force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Corker_Pushon_Model__c.field-meta.xml
<CustomField>
    <fullName>Corker_Pushon_Model__c</fullName>
    <label>Corker / Pushon Model</label>
    <length>30</length>
    <type>Text</type>
</CustomField>