force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Corker_Pushon_Tax_Tape__c.field-meta.xml
<CustomField>
    <fullName>Corker_Pushon_Tax_Tape__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Corker / Pushon Tax Tape</label>
    <type>Checkbox</type>
</CustomField>