force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Corker_Pushon_Type_of_Caps__c.field-meta.xml
<CustomField>
    <fullName>Corker_Pushon_Type_of_Caps__c</fullName>
    <label>Corker / Pushon - Type of Caps</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cork</fullName>
            </value>
            <value>
                <fullName>Push on</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>