force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Crimp_mm_Maximum__c.field-meta.xml
<CustomField>
    <fullName>Crimp_mm_Maximum__c</fullName>
    <label>Crimp (mm) Maximum</label>
    <length>4</length>
    <type>Text</type>
</CustomField>