force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Crowner_Cap_supplier__c.field-meta.xml
<CustomField>
    <fullName>Crowner_Cap_supplier__c</fullName>
    <label>Crowner Cap supplier</label>
    <length>30</length>
    <type>Text</type>
</CustomField>