force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Crowner_Make__c.field-meta.xml
<CustomField>
    <fullName>Crowner_Make__c</fullName>
    <label>Crowner Make</label>
    <length>30</length>
    <type>Text</type>
</CustomField>