force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Crowner_Model__c.field-meta.xml
<CustomField>
    <fullName>Crowner_Model__c</fullName>
    <label>Crowner Model</label>
    <length>30</length>
    <type>Text</type>
</CustomField>