force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Crowner_Number_of_heads__c.field-meta.xml
<CustomField>
    <fullName>Crowner_Number_of_heads__c</fullName>
    <label>Crowner - Number of heads</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>