force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Crowner_Tax_Tape__c.field-meta.xml
<CustomField>
    <fullName>Crowner_Tax_Tape__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Crowner Tax Tape</label>
    <type>Checkbox</type>
</CustomField>