force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Crowner_Type_of_Caps__c.field-meta.xml
<CustomField>
    <fullName>Crowner_Type_of_Caps__c</fullName>
    <label>Crowner - Type of Caps</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Twist-off</fullName>
            </value>
            <value>
                <fullName>Crimp</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>