force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Technical Reports (CTR)</relationshipLabel>
    <relationshipName>Customer_Technical_Reports_CTR</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>