force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Date_Batch_Coding__c.field-meta.xml
<CustomField>
    <fullName>Date_Batch_Coding__c</fullName>
    <label>Date  / Batch Coding</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lasered</fullName>
            </value>
            <value>
                <fullName>Printed</fullName>
            </value>
            <value>
                <fullName>Bottle</fullName>
            </value>
            <value>
                <fullName>Label</fullName>
            </value>
            <value>
                <fullName>Batch Number</fullName>
            </value>
            <value>
                <fullName>Best Before</fullName>
            </value>
            <value>
                <fullName>Cap</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>