force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Deshrouding__c.field-meta.xml
<CustomField>
    <fullName>Deshrouding__c</fullName>
    <label>Deshrouding</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manually</fullName>
            </value>
            <value>
                <fullName>Automatically</fullName>
            </value>
            <value>
                <fullName>MSK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>