force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/EBI_Inspecions__c.field-meta.xml
<CustomField>
    <fullName>EBI_Inspecions__c</fullName>
    <label>EBI Inspecions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Finish</fullName>
            </value>
            <value>
                <fullName>Sidewall</fullName>
            </value>
            <value>
                <fullName>Base</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>