force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/EBI_Make__c.field-meta.xml
<CustomField>
    <fullName>EBI_Make__c</fullName>
    <label>EBI Make</label>
    <length>30</length>
    <type>Text</type>
</CustomField>