force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/EBI_Model__c.field-meta.xml
<CustomField>
    <fullName>EBI_Model__c</fullName>
    <label>EBI Model</label>
    <length>30</length>
    <type>Text</type>
</CustomField>