force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/FBI__c.field-meta.xml
<CustomField>
    <fullName>FBI__c</fullName>
    <label>FBI</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>