force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/FBI_Inspection_Other__c.field-meta.xml
<CustomField>
    <fullName>FBI_Inspection_Other__c</fullName>
    <label>FBI Inspection Other</label>
    <length>50</length>
    <type>Text</type>
</CustomField>