force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/FBI_Make__c.field-meta.xml
<CustomField>
    <fullName>FBI_Make__c</fullName>
    <label>FBI Make</label>
    <length>30</length>
    <type>Text</type>
</CustomField>