force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/FBI_Model__c.field-meta.xml
<CustomField>
    <fullName>FBI_Model__c</fullName>
    <label>FBI Model</label>
    <length>30</length>
    <type>Text</type>
</CustomField>