force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Filler_Make__c.field-meta.xml
<CustomField>
    <fullName>Filler_Make__c</fullName>
    <label>Filler Make</label>
    <length>30</length>
    <type>Text</type>
</CustomField>