force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Filler_Model__c.field-meta.xml
<CustomField>
    <fullName>Filler_Model__c</fullName>
    <label>Filler Model</label>
    <length>30</length>
    <type>Text</type>
</CustomField>