force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Filler_Thread_Crown_Flush__c.field-meta.xml
<CustomField>
    <fullName>Filler_Thread_Crown_Flush__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Filler - Thread/Crown Flush</label>
    <type>Checkbox</type>
</CustomField>