force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Filler_Volumetric__c.field-meta.xml
<CustomField>
    <fullName>Filler_Volumetric__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Filler - Volumetric</label>
    <type>Checkbox</type>
</CustomField>