force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Flash_Pasteurisation__c.field-meta.xml
<CustomField>
    <fullName>Flash_Pasteurisation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flash Pasteurisation</label>
    <type>Checkbox</type>
</CustomField>