force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Form_Complete__c.field-meta.xml
<CustomField>
    <fullName>Form_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Once the record is complete and your happy for the email to be sent to Scott and David please tick this box and save the record.</inlineHelpText>
    <label>Form Complete</label>
    <type>Checkbox</type>
</CustomField>