force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Glideliner__c.field-meta.xml
<CustomField>
    <fullName>Glideliner__c</fullName>
    <label>Glideliner</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Metal</fullName>
            </value>
            <value>
                <fullName>Plastic</fullName>
            </value>
            <value>
                <fullName>Falling Bottles</fullName>
            </value>
            <value>
                <fullName>Wet Lube</fullName>
            </value>
            <value>
                <fullName>Dry Lube</fullName>
            </value>
            <value>
                <fullName>No Lube</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>