force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Hand_Loading__c.field-meta.xml
<CustomField>
    <fullName>Hand_Loading__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hand Loading</label>
    <type>Checkbox</type>
</CustomField>