force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Height_Capabilities__c.field-meta.xml
<CustomField>
    <fullName>Height_Capabilities__c</fullName>
    <label>Height Capabilities</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Short Pack</fullName>
            </value>
            <value>
                <fullName>Tall Pack</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>