force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Hot_Fill__c.field-meta.xml
<CustomField>
    <fullName>Hot_Fill__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hot Fill</label>
    <type>Checkbox</type>
</CustomField>