force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Indexing_Type__c.field-meta.xml
<CustomField>
    <fullName>Indexing_Type__c</fullName>
    <label>Indexing Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Carriage</fullName>
            </value>
            <value>
                <fullName>Pallet</fullName>
            </value>
            <value>
                <fullName>Robot</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>