force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Inspections__c.field-meta.xml
<CustomField>
    <fullName>Inspections__c</fullName>
    <label>Inspections</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Orientation</fullName>
            </value>
            <value>
                <fullName>Creasing</fullName>
            </value>
            <value>
                <fullName>Barcode</fullName>
            </value>
            <value>
                <fullName>Askew</fullName>
            </value>
            <value>
                <fullName>Missing Neck</fullName>
            </value>
            <value>
                <fullName>Missing Front</fullName>
            </value>
            <value>
                <fullName>Missing Back</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Missing Body</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>