force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Inspections_other__c.field-meta.xml
<CustomField>
    <fullName>Inspections_other__c</fullName>
    <label>Inspections other</label>
    <length>30</length>
    <type>Text</type>
</CustomField>